<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/mHomeGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorWhite" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:alpha="0.8"
        android:background="@color/colorWhite"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/mTab1Rel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/mTab2Rel"
            app:layout_constraintVertical_chainStyle="packed">

            <ImageView
                android:id="@+id/mTab1Img"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/home_tab1_light" />

            <TextView
                android:id="@+id/mTab1Tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mTab1Img"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/home_page"
                android:textColor="@color/colorBlack" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mTab2Rel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/mTab1Rel"
            app:layout_constraintRight_toLeftOf="@+id/mTab3Rel">

            <ImageView
                android:id="@+id/mTab2Img"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/home_tab2_dark" />

            <TextView
                android:id="@+id/mTab2Tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mTab2Img"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/home_second"
                android:textColor="@color/colorBlack" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mTab3Rel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/mTab2Rel"
            app:layout_constraintRight_toLeftOf="@+id/mTab4Rel">

            <ImageView
                android:id="@+id/mTab3Img"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/home_tab3_dark" />

            <TextView
                android:id="@+id/mTab3Tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mTab3Img"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/home_third"
                android:textColor="@color/colorBlack" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mTab4Rel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/mTab3Rel"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:id="@+id/mTab4Img"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/home_tab4_dark" />

            <TextView
                android:id="@+id/mTab4Tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mTab4Img"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/home_mine"
                android:textColor="@color/colorBlack" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
